# Erics3DEngine

./: CMakeLists.txt  main.cpp
cmake/: FindGLFW.cmake  FindLeapMotion.cmake
include/: Application.hpp  Exception.hpp  TestScene.hpp
shaders/: cubicBezier.fs.glsl  cubicBezier.tcs.glsl  cubicBezier.tes.glsl  cubicBezier.vs.glsl  default.fs.glsl  default.vs.glsl  drawCtrlPts.fs.glsl  drawCtrlPts.vs.glsl  flocking.cs.glsl  flocking.fs.glsl  flocking.vs.glsl  grass.fs.glsl  grass.vs.glsl  julia.fs.glsl  julia.vs.glsl  leapScene.fs.glsl  rainbow_tri.fs.glsl  starfield.fs.glsl  starfield.vs.glsl  test.vs.glsl  text.fs.glsl  text.vs.glsl  texture.fs.glsl  texture.vs.glsl
src/: Application.cpp  Program.cpp  Shader.cpp  TestScene.cpp  main.cpp
src/Erics3DEngine/Engine/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Debug.hpp  Input.cpp  Input.hpp  Program.cpp  Program.hpp  Scene.hpp  Shader.cpp  Shader.hpp  TextOverlay.cpp  TextOverlay.hpp  Texture.cpp  Texture.hpp
src/Erics3DEngine/Engine/Geometry/: Cube.cpp  Cube.hpp  Geometry.hpp  Plane.cpp  Plane.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  TruncatedCone.cpp  TruncatedCone.hpp
src/Erics3DEngine/Engine/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
src/Scenes/: CubicBezierScene.cpp  CubicBezierScene.hpp  FlockingScene.cpp  FlockingScene.hpp  GrassScene.cpp  GrassScene.hpp  JuliaScene.cpp  JuliaScene.hpp  LeapListener.cpp  LeapListener.hpp  LeapMotionScene.cpp  LeapMotionScene.hpp  OMPParticlesScene.cpp  OMPParticlesScene.hpp  PhysicsScene.cpp  PhysicsScene.hpp  RainbowTriangleScene.cpp  RainbowTriangleScene.hpp  StarfieldScene.cpp  StarfieldScene.hpp  TextureSampleScene.cpp  TextureSampleScene.hpp
